# openmp-benchmark

./: LICENSE  README.md  benchmark_runner.py  pyproject.toml
examples/: example_script.py  fft.py  sht.py
