[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openmp-benchmark"
version = "0.1.0"
description = "CLI tool to benchmark OpenMP-enabled Python code by thread count"
authors = [{ name="Mathew Madhavacheril", email="mathewsyriac@gmail.com" }]
dependencies = [
    "pandas",
    "matplotlib"
]
requires-python = ">=3.8"

[project.scripts]
openmp-benchmark = "benchmark_runner:main"
